--- a/src/main/webapp/views/main/heading.xhtml
+++ b/src/main/webapp/views/main/heading.xhtml
@@ -6,9 +6,11 @@ and open the template in the editor.
 -->
 <!DOCTYPE html>
 <ui:composition xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://xmlns.jcp.org/jsf/html"
-      template="/templates/default.xhtml"
-      xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
-    <ui:define name="content">
-    </ui:define>
+                xmlns:h="http://xmlns.jcp.org/jsf/html"
+                xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+                xmlns:f="http://xmlns.jcp.org/jsf/core">
+                
+    <h:outputText value="#{msgs.title}"></h:outputText>
+    sdfkfds;l
+    
 </ui:composition>
