--- a/src/main/webapp/resources/css/default.css
+++ b/src/main/webapp/resources/css/default.css
@@ -8,26 +8,30 @@ and open the template in the editor.
     Author     : aleksander
 */
 body {
-    background-color: #ffae19;
+    background-color: #ffe6bf;
 }
 
 .heading {
-    font-size: 20px;
+    text-align: center;
+    font-size: 40pt;
+    color: #666666;
     background-color: #5edd0c;
     width: 1000px;
-    height: 200px;
+    height: 100px;
     margin-top: 30px;
     margin-left: 100px;
     border-radius: 20px;
 }
 
 .menu {
-    background-color: #415bc8;
+    background-color: #ffff66;
     width: 300px;
     height: 500px;
     float: left;
     margin-left: 100px;
     border-radius: 20px;
+    text-decoration: none;
+    font-size: 20pt;
 }
 
 .content {
