--- a/src/main/webapp/templates/default.xhtml
+++ b/src/main/webapp/templates/default.xhtml
@@ -18,7 +18,7 @@ and open the template in the editor.
     <h:body>
         <h:outputStylesheet library="css" name="default.css" />
         <div class="heading">
-            <ui:insert>
+            <ui:insert name="heading">
                 <ui:include src="/views/main/heading.xhtml" />
             </ui:insert>
         </div>
