--- a/src/main/webapp/views/main/heading.xhtml
+++ b/src/main/webapp/views/main/heading.xhtml
@@ -9,8 +9,8 @@ and open the template in the editor.
                 xmlns:h="http://xmlns.jcp.org/jsf/html"
                 xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
                 xmlns:f="http://xmlns.jcp.org/jsf/core">
-                
-    <h:outputText value="#{msgs.title}"></h:outputText>
-    sdfkfds;l
-    
+    <div>            
+        <h:outputText value="#{msgs.title}"></h:outputText>
+    </div>
+
 </ui:composition>
